<resources>
    <string name="app_name">BZF-Trainer</string>
    <string name="app_description">Wenn du genauso wie ich dich theoretisch und praktisch auf die BZF- oder AZF-Flugfunkprüfung nur eher schlecht als recht vorbereitest fühlst, ist der BZF-Trainer vielleicht genau das richtige für dich.  Diese App beinhaltet:  • 260+289 Fragen mit jeweils vier Antwortmöglichkeiten im Wer-wird-Millionär-Stil  • einen Simulator, mit welchem ein Ab- und Anflug zu einem kontrollierten Platz durchgespielt werden kann.  Bitte beachte noch folgendes:  Ich bin kein erfahrender Android-Entwickler, sondern habe mit dieser App angefangen, um mich für die Prüfung vorzubereiten. Daher möchte ich Leuten denen es ähnlich geht, diese App zur freien Verfügung stellen. Ich garantiere jedoch in keinster Art und Weise, dass die Fragen im Katalog oder die Redewendungen im Simulator aktuell sind oder dass sie in dieser Form in der Prüfung abgefragt werden. Diese App dient nur als <i>Vorbereitung</i> und ersetzt <b>nicht</b> ein richtiges BZF- oder AZF-Training.  Ansonsten viel Spaß mit dem BZF-Trainer und viel Erfolg in der Prüfung ;)</string>
    <string name="positive">Ja</string>
    <string name="negative">Nein</string>
    <string name="language">Sprache</string>
    <string name="btn_info">Info</string>
    <string name="txt_progress">%1$d von %2$d</string>
    <string name="txt_notes">Notizen</string>
    <string name="crash_msg">Entschuldigung, da ging leider etwas schief. Ein Fehlerbericht wurde automatisch versendet, damit das Problem so schnell wie möglich behoben werden kann.</string>
    <string name="catalogue">Fragen-Katalog</string>
    <string name="catalogue_stat">bisher %1$d von %2$d mal richtig beantwortet</string>
    <string name="catalogue_version">Stand: September 2023</string>
    <string name="azf">AZF</string>
    <string name="bzf">BZF</string>
    <string name="simulator">Simulator</string>
    <string name="feedback">Feedback</string>
    <string name="msg_finish_pass">Glückwunsch, du hast bestanden</string>
    <string name="msg_finish_fail">Schade, leider hast du nicht bestanden&#8230;</string>
    <string name="msg_finish">Du hast %1$d von %2$d Fragen richtig beantwortet.</string>
    <string name="msg_finish_sim">%1$d %% richtig gesagt</string>
    <string name="msg_record_explanation">Gedrückt halten zum Senden</string>
    <string name="restart">Von vorne</string>
    <string name="restart_alert">Bist du sicher, dass du die Fragen von vorne beantworten möchtest?</string>
    <string name="statistics">Statistik</string>
    <string name="statistics_history">Verlauf</string>
    <string name="statistics_azf">AZF Antworten</string>
    <string name="statistics_bzf">BZF Antworten</string>
    <string name="statistics_empty_welcome">Willkommen beim BZF-Trainer</string>
    <string name="statistics_empty_message">Mit dieser App kannst du die offiziellen Fragen der Bundesnetzagentur für die BZF- und AZF-Prüfung üben. Und das von unterwegs!\n\nSobald du einen Fragenkatalog abschließt, wird hier eine Statistik deiner Erfolge angezeigt. Um zu starten, wähle einfach einen der beiden Fragenkataloge aus:</string>
    <string name="statistics_empty_good_luck">Viel Erfolg bei der Prüfung!</string>
    <string name="settings_reset">Ergebnisse zurücksetzen</string>
    <string name="settings_reset_sum">Löscht alle bisherigen Versuche und setzt die Statistiken wieder auf null</string>
    <string name="settings_reset_alert">Bist du sicher, dass du ALLE Daten der App zurücksetzen möchtests? Das umfasst deine Statistiken und aktuellen Katalogfortschritte. Deine In-App-Käufe bleiben aber erhalten.</string>
    <string name="settings_reset_toast">Ergebnisse zurückgesetzt</string>
    <string name="settings">Einstellung</string>
    <string name="settings_general">Allgemein</string>
    <string name="settings_shuffle_questions">Zufällige Fragen</string>
    <string name="settings_shuffle_questions_sum">Sollen die Fragen zufällig oder nacheinander abgefragt werden? (Wirkt sich erst auf den nächsten Test aus)</string>
    <string name="settings_shuffle_answers">Zufällige Antworten</string>
    <string name="settings_shuffle_answers_sum">Sollen die vier Antwortmöglichkeiten jedesmal durchgemischt werden?</string>
    <string name="settings_text_size">Schriftgröße</string>
    <string name="settings_text_size_sum">Wie groß sollen Fragen und Antworten geschrieben werden?</string>
    <string name="settings_delay">Verzögerung</string>
    <string name="settings_delay_sum">Wie viele Sekunden soll die richtige Lösung angezeigt werden, bis zur nächsten Frage gewechselt wird? </string>
    <string name="settings_delay_on_wrongs">Verzögerung nur bei falschen Antworten</string>
    <string name="settings_delay_on_wrongs_sum">Soll nur bei falschen Antworten gewartet werden? Bei richtigen Antworten wird dann sofort die nächsten Frage angezeigt.</string>
    <string name="settings_vibrate">Vibration</string>
    <string name="settings_vibrate_correct">&#8230;bei richtigen Antworten</string>
    <string name="settings_vibrate_false">&#8230;bei falschen Antworten</string>
    <string name="settings_question_stats">Antwortstatistik</string>
    <string name="settings_question_stats_sum">Soll unter jeder Frage angezeigt werden, wie oft du sie falsch beantwortet hast? (freigeschaltet mit \"Fragenfilter\")</string>
    <string name="settings_pen">Schreiben mit Stift</string>
    <string name="settings_pen_sum">Wenn du mit einem Stift schreibst, kannst du mit dem Finger radieren. Ansonsten mit einem Finger schreiben und mit zwei radieren.</string>
    <string name="settings_sim_language_sum">Willst du in Englisch funken?</string>
    <string name="settings_sim_language_en">EN</string>
    <string name="settings_sim_language_de">DE</string>
    <string name="settings_sim_aircraft">Flugzeug</string>
    <string name="settings_sim_aricraft_sum">Welchen Typ willst du fliegen? (Namen wie \"Cessna\" ausschreiben, damit Spracherkennung funktioniert)</string>
    <string name="settings_sim_callsign">Rufzeichen</string>
    <string name="settings_sim_callsign_sum">Auf welches Rufzeichen ist dein Flugzeug eingetragen?</string>
    <string name="settings_sim_level">Schwierigkeit</string>
    <string name="settings_sim_level_sum">Wie komplex sollen die Freigaben sein?</string>
    <string name="settings_sim_recorder">Spracherkennung überbrücken</string>
    <string name="settings_sim_recorder_sum">Bewirkt, dass deine Sprache nicht mehr aufgenommen wird, sondern die nächste Meldung von ATC direkt abgespielt wird (falls Probleme mit der Spracherkennung auftreten)</string>
    <string name="settings_open_speech_api">Öffne Spracheinstellungen</string>
    <string name="settings_open_speech_api_sum">Wenn du Fehler beim Senden im Simulator hast, probiere die Sprach-Engine auf \"Google\&quot; zu stellen</string>
    <string name="settings_open_tts_api">Öffne Text-zu-Sprach-Einstellungen</string>
    <string name="settings_open_tts_api_sum">Wenn ATC im Simulator schlecht klingt, probiere die TTS-Engine zurück auf \&quot;Google\&quot; zu stellen</string>
    <string-array name="settings_sim_levels">
        <item>leicht</item>
        <item>mittel</item>
        <item>schwer</item>
    </string-array>
    <string-array name="settings_sim_levels_indices">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="settings_sim_help">Hilfe</string>
    <string name="settings_sim_help_sum">Sollen Untertitel angezeigt werden?</string>
    <string name="settings_sim_help_atc">&#8230;von ATC-Meldungen</string>
    <string name="settings_sim_help_you">&#8230;von deiner nächsten Meldung</string>
    <string name="please_wait">Bitte warten</string>
    <string name="sim_init">Die Spracherkennung arbeitet am besten mit bestehender Internetverbindung. Soll das WLAN aktiviert werden?</string>
    <string name="sim_info">Die Spracherkennung von Google hat es mit den Eigenarten des Funkjargons nicht leicht. Deswegen werden viele Ausdrücke falsch oder nicht verstanden.\n\nVersuche alles langsam und, so gut es geht, \"amerikanisch\" auszusprechen.\n\nAußerdem sorgt eine Internetverbindung für bessere Ergebnisse.</string>
    <string name="sim_info_mic">Dieser Teil der App benötigt die Berechtigung deine Stimme aufzuzeichen. Möchtest du zu den App-Einstellungen wechseln um sie zu aktivieren?</string>
    <string name="sim_info_wifi_deny">OK, falls du es dir überlegst, starte den Simulator neu</string>
    <string name="sim_info_volume">Denk daran, die Lautstärke zu erhöhen um ATC zu hören</string>
    <string name="sim_default_callsign">DEABC</string>
    <string name="sim_default_aircraft">Cessna 172</string>
    <string name="sim_txt_atis">ATIS: %1$s</string>
    <string name="sim_lbl_you">Du:</string>
    <string name="sim_msg_departure_select">Wo soll gestartet werden?</string>
    <string name="sim_msg_arrival_select">Wo soll gelandet werden?</string>
    <string name="sim_msg_departure_complete">Jetzt bei %1$s melden</string>
    <string name="sim_chat_message_hidden">•••</string>
    <string-array name="airports">
        <item>EDDB</item>
        <item>EDDF</item>
        <item>EDDH</item>
        <item>EDDM</item>
    </string-array>
    <string-array name="airport_names_en">
        <item>Berlin</item>
        <item>Frankfurt</item>
        <item>Hamburg</item>
        <item>Munich</item>
    </string-array>
    <string-array name="airport_names_de">
        <item>Berlin</item>
        <item>Frankfurt</item>
        <item>Hamburg</item>
        <item>München</item>
    </string-array>
    <string name="feedback_text">Ist dir ein Fehler aufgefallen oder möchtest du sonst etwas zum BZF-Trainer sagen?</string>
    <string name="feedback_type">Worum geht es?</string>
    <string name="feedback_comment">Kommentar</string>
    <string name="feedback_sent">Vielen Dank für dein Feedback</string>
    <string name="feedback_warranty">Diese Daten werden natürlich anonym behandelt und dienen nur der Verbesserung der App.</string>
    <string-array name="feedback_types">
        <item>Fehler/Bug</item>
        <item>Absturz</item>
        <item>Bemerkung</item>
        <item>etwas anderes</item>
    </string-array>
    <string-array name="feedback_activities">
        <item>Fragen-Katalog</item>
        <item>Simulator</item>
        <item>Einstellungen</item>
        <item>allgemein</item>
    </string-array>
    <string name="send">Senden</string>
    <string name="cancel">Doch nicht</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="background_color">black</string>
    <string name="settings_theme">Dark-Mode</string>
    <string name="settings_theme_summary">Sollen die Farben der App abgedunkelt werden um Batterie sparen?</string>
    <string name="settings_theme_light">Hell</string>
    <string name="settings_theme_dark">Dunkel</string>
    <string name="shop_title">Gefällt dir der BZF-Trainer?</string>
    <string name="shop_summary">Dann denke doch über eine Spende nach. Somit unterstützt du mich als Entwickler, damit du und andere immer die neusten Fragen bekommen.\n\nDie App wird immer kostenlos bleiben! Wenn du mich jedoch unterstützt, gibt\'s auch eine kleine Belohnung.</string>
    <string name="shop_btn_ok">Nein Danke</string>
    <string name="shop_btn_dark_mode">2.99 €</string>
    <string name="shop_lbl_dark_mode">\&quot;Dark-Mode\&quot; freischalten</string>
    <string name="shop_btn_question_filter">0.99 €</string>
    <string name="shop_lbl_question_filter">\&quot;Fragenfilter\&quot; freischalten</string>
    <string name="shop_warn_service_unavailable">Verbinde dich bitte mit dem Internet</string>
</resources>