<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shop_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shop_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/shop_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shop_btn_question_filter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/shop_btn_question_filter"
        app:layout_constraintBottom_toBottomOf="@id/shop_lbl_question_filter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_summary"
    />

    <TextView
        android:id="@+id/shop_lbl_question_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:minHeight="42dp"
        android:singleLine="false"
        android:text="@string/shop_lbl_question_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/shop_btn_question_filter"
        app:layout_constraintTop_toBottomOf="@id/shop_summary"
    />

    <Button
        android:id="@+id/shop_btn_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/shop_btn_dark_mode"
        app:layout_constraintBottom_toBottomOf="@id/shop_lbl_dark_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_btn_question_filter"
     />

    <TextView
        android:id="@+id/shop_lbl_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:minHeight="42dp"
        android:singleLine="false"
        android:text="@string/shop_lbl_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/shop_btn_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/shop_lbl_question_filter" />

    <!--
    <Button
        android:id="@+id/shop_btn_testing"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="0.99 $"
        app:layout_constraintBottom_toBottomOf="@id/shop_lbl_testing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_lbl_dark_mode" />

    <TextView
        android:id="@+id/shop_lbl_testing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:minHeight="42dp"
        android:singleLine="false"
        android:text="Spenden und TESTEN freischalten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/shop_btn_testing"
        app:layout_constraintTop_toBottomOf="@id/shop_lbl_dark_mode" />
-->

</androidx.constraintlayout.widget.ConstraintLayout>