<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".SimulatorFragment">

    <LinearLayout
        android:id="@+id/lyt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Callsign -->
        <TextView
            android:id="@+id/sim_txt_callsign"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sim_default_callsign" />

        <!-- Aircraft -->
        <TextView
            android:id="@+id/sim_txt_aircraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sim_default_aircraft"
             />

        <!-- ATIS -->
        <TextView
            android:id="@+id/sim_txt_atis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sim_txt_atis" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_airports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/lyt_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lyt_info"
        app:layout_constraintTop_toTopOf="@id/lyt_info">
        <!-- Departure -->
        <ImageView
            android:id="@+id/icon_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sim_msg_departure_select"
            android:src="@drawable/departure_light" />

        <Spinner
            android:id="@+id/sim_cbx_dep"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:entries="@array/airports"
            android:gravity="center"
            android:prompt="@string/sim_msg_departure_select"
            android:spinnerMode="dropdown" />
        <!-- Arrival -->
        <Spinner
            android:id="@+id/sim_cbx_arr"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:entries="@array/airports"
            android:gravity="center"
            android:prompt="@string/sim_msg_arrival_select"
            android:spinnerMode="dropdown" />

        <ImageView
            android:id="@+id/icon_arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sim_msg_departure_select"
            android:src="@drawable/arrival_light" />
    </LinearLayout>

    <de.tgoll.projects.bzf.LineView
        android:id="@+id/sim_divider_top"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/lyt_info"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="1dp" />

    <ScrollView
        android:id="@+id/sim_lyt_table_help"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/canvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sim_divider_top"
        app:layout_constraintVertical_weight="2">

        <LinearLayout
            android:id="@+id/sim_lyt_table_help_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- For testing in Design View, will be removed in SimulatorFragment -->
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_you" />
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_you" />
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_you" />
            <include layout="@layout/sim_chat_message_you" />
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_atc" />
            <include layout="@layout/sim_chat_message_you" />
            <include layout="@layout/sim_chat_message_you" />

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/txt_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/canvas"
        android:layout_margin="8dp"
        android:text="@string/txt_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sim_lyt_table_help" />

    <de.tgoll.projects.bzf.PaintView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/sim_lyt_table_help" />

    <ImageButton
        android:id="@+id/btn_record"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/record"
        android:backgroundTint="@color/record_button"
        android:clickable="true"
        android:contentDescription="@string/msg_record_explanation"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40sp"
        android:minWidth="40sp"
        android:background="@drawable/clear"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>